        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.7-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : normal
Bugzilla   : 15443
Description: wait until IO finished before start new when do lock cancel.
Details    : VM protocol want old IO finished before start new, in this case
             need wait until PG_writeback is cleared until check dirty flag and
             call writepages in lock cancel callback.

Severity   : enhancement
Bugzilla   : 14929
Description: using special macro for print time and cleanup in includes.

Severity   : normal
Bugzilla   : 12888
Description: mds_mfd_close() ASSERTION(rc == 0) 
Details    : In mds_mfd_close(), we need protect inode's writecount change 
             within its orphan write semaphore to prevent possible races.

Severity   : minor
Bugzilla   : 14929
Description: Obsolete CURRENT_SECONDS and use cfs_time_current_sec() instead.

Severity   : minor
Bugzilla   : 14645
Frequency  : rare, on shutdown ost
Description: don't hit live lock with umount ost.
Details    : shrink_dcache_parent can be in long loop with destroy dentries,
	     use shrink_dcache_sb instead.

Severity   : minor
Bugzilla   : 14949
Description: don't panic with use echo client
Details    : echo client pass NULL as client nid pointer and this produce null
             pointer dereference.

Severity   : normal
Bugzilla   : 15278
Description: fix build on ppc32
Details    : compile code with -m64 flag produce wrong object file for ppc32.

Severity   : normal
Bugzilla   : 12191
Description: add message levels for liblustreapi

Severity   : normal
Bugzilla   : 13380
Description: fix for occasional failure case of -ENOSPC in recovery-small tests 